Add annotation @Comment to WekaParser