@@ -97,9 +97,20 @@ public class WekaParser<T> {
      */
     public ArrayList<String> wekaReadyAttributes() {
         ArrayList<Field> arr = this.getFields();
-        ArrayList<String> str = new ArrayList<>();
+        ArrayList<String> str = new ArrayList<>(arr.size());
+        int maxFieldLength = arr.stream().map(f -> f.getName().length()).max(ExtComparator.ofComparable()).orElse(30) + 3;
+        int maxTypeLength = arr.stream().map(f -> f.getType()).map(f -> ensureWekaPrinter(f).typeInfo().length()).max(ExtComparator.ofComparable()).orElse(30) + 3;
         F.iterate(arr, (i, field) -> {
-            str.add("@ATTRIBUTE " + field.getName() + " " + ensureWekaPrinter(field.getType()).typeInfo());
+            Optional<String> map = F.find(field.getAnnotations(), (j, a) -> {
+                return a instanceof Comment;
+            }).map(m -> {
+                Comment com = F.cast(m.g2);
+                return com.value();
+            }).map(m -> "  %" + m);
+
+            String format = String.format("@ATTRIBUE %-" + maxFieldLength + "s %-" + maxTypeLength + "s", field.getName(), ensureWekaPrinter(field.getType()).typeInfo() + map.orElse(""));
+            str.add(format);
+//            str.add("@ATTRIBUTE " + field.getName() + " " + ensureWekaPrinter(field.getType()).typeInfo() + map.orElse(""));
         });
         return str;
     }
@@ -113,7 +124,7 @@ public class WekaParser<T> {
      * @throws Exception
      */
     public T objectFromAttributes(List<String> attributes) throws Exception {
-        T newInstance = this.cls.newInstance();
+        T newInstance = this.cls.getDeclaredConstructor().newInstance();
         ArrayList<Field> fields = this.getFields();
 
         if (attributes.size() > fields.size()) {
